welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:3: error: value avance is not a member of Unit
def right() {avance();avance();avance();avance();avance();avance();gauche()avance();avance();avance();droite();avance();avance();gauceh();avance();droite()}
                                                                           ^FlowerCase:3: error: not found: value gauceh
def right() {avance();avance();avance();avance();avance();avance();gauche()avance();avance();avance();droite();avance();avance();gauceh();avance();droite()}
                                                                                                                                 ^